--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -32,9 +32,14 @@ animations {
 
 # remove gaps between windows and around screen edges
 general {
-    gaps_in = 0
-    gaps_out = 0
+    gaps_in = 3
+    gaps_out = 6
     border_size = 0
+}
+
+decoration {
+    # Use round window corners
+    rounding = 6
 }
 
 # don't save screenshots
