--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -55,7 +55,7 @@ confirm-close-surface = false
 gtk-tabs-location = bottom
 gtk-wide-tabs = false
 gtk-titlebar = false
-adw-toolbar-style = raised-border
+# adw-toolbar-style = raised-border
 window-decoration = auto
 window-theme = ghostty
 
