--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -42,7 +42,7 @@
 # Just for example:
 # resize-overlay-duration = 4s 200ms
 background = 000000
-# theme = lackluster
+theme = zenbones
 
 font-family = Berkeley Mono
 font-size = 10
