--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -24,7 +24,7 @@
       <string>monospace</string>
     </test>
     <edit name="family" mode="assign" binding="strong">
-      <string>TX-02</string>
+      <string>Berkeley Mono</string>
     </edit>
   </match>
 
