--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,9 +1,14 @@
 source = ~/.config/omarchy/current/theme/hyprlock.conf
+ 
+general {
+    ignore_empty_input = true
+}
 
 background {
     monitor =
     color = $color
-    path = ~/.config/omarchy/current/background
+    # path = ~/.config/omarchy/current/background
+    path = ~/Downloads/cabin
     blur_passes = 3
 }
 
@@ -22,7 +27,7 @@ input-field {
     outer_color = $outer_color
     outline_thickness = 4
 
-    font_family = CaskaydiaMono Nerd Font
+    font_family = Berkeley Mono
     font_color = $font_color
 
     placeholder_text = Enter Password
