--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -7,8 +7,7 @@ general {
 background {
     monitor =
     color = $color
-    # path = ~/.config/omarchy/current/background
-    path = ~/Downloads/cabin
+    path = ~/.config/omarchy/current/background
     blur_passes = 3
 }
 
