--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -15,6 +15,7 @@ confirm_os_window_close 0
 map F11 toggle_fullscreen
 map ctrl+insert copy_to_clipboard
 map shift+insert paste_from_clipboard
+map ctrl+t new_tab_with_cwd
 
 # Allow remote access
 single_instance yes
