--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -15,6 +15,7 @@ confirm_os_window_close 0
 map F11 toggle_fullscreen
 map ctrl+insert copy_to_clipboard
 map shift+insert paste_from_clipboard
+map shift+enter send_text normal,application \x1b[13;2u
 map ctrl+t new_tab_with_cwd
 
 # Allow remote access
@@ -24,6 +25,8 @@ allow_remote_control yes
 # Aesthetics
 # cursor_shape block
 # enable_audio_bell no
+cursor_trail 1
+cursor_trail_start_threshold 2
 
 # Minimal Tab bar styling 
 tab_bar_edge                bottom
