--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -4,7 +4,7 @@
   "position": "top",
   "spacing": 0,
   "height": 26,
-  "modules-left": ["custom/omarchy", "hyprland/workspaces"],
+  "modules-left": ["custom/arch", "hyprland/workspaces"],
   "modules-center": ["clock", "custom/update", "custom/voxtype", "custom/screenrecording-indicator"],
   "modules-right": [
     "group/tray-expander",
@@ -19,17 +19,16 @@
     "format": "{icon}",
     "format-icons": {
       "default": "",
-      "1": "1",
-      "2": "2",
-      "3": "3",
-      "4": "4",
-      "5": "5",
-      "6": "6",
-      "7": "7",
-      "8": "8",
-      "9": "9",
-      "10": "0",
-      "active": "󱓻"
+      "1": "I",
+      "2": "II",
+      "3": "III",
+      "4": "IV",
+      "5": "V",
+      "6": "VI",
+      "7": "VII",
+      "8": "VIII",
+      "9": "IX",
+      "10": "X",
     },
     "persistent-workspaces": {
       "1": [],
@@ -39,12 +38,12 @@
       "5": []
     }
   },
-  // "custom/omarchy": {
-  //   "format": "<span font='omarchy'>\ue900</span>",
-  //   "on-click": "omarchy-menu",
-    "on-click-right": "xdg-terminal-exec",
-  //   "tooltip-format": "Omarchy Menu\n\nSuper + Alt + Space"
-  // },
+  "custom/arch": {
+    "format": "󰣇",
+    // "on-click": "omarchy-menu",
+    // "on-click-right": "xdg-terminal-exec",
+    "tooltip-format": "Arch Linux"
+  },
   "custom/update": {
     "format": "",
     "exec": "omarchy-update-available",
