--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -16,7 +16,7 @@ map F11 toggle_fullscreen
 map ctrl+insert copy_to_clipboard
 map shift+insert paste_from_clipboard
 map shift+enter send_text normal,application \x1b[13;2u
-map ctrl+t new_tab_with_cwd
+map ctrl+shift+t new_tab_with_cwd
 
 # Allow remote access
 single_instance yes
@@ -33,3 +33,4 @@ tab_bar_edge                bottom
 tab_bar_style               powerline
 tab_powerline_style         slanted
 tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
+
