--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -33,3 +33,5 @@ tab_bar_style               powerline
 tab_powerline_style         slanted
 tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
 
+
+copy_on_select yes
