--- a/.config/kitty/themes/koda_dark.conf
+++ b/.config/kitty/themes/koda_dark.conf
@@ -7,7 +7,7 @@ background                      #000000
 selection_foreground            #b0b0b0
 selection_background            #272727
 # Cursor colors
-cursor                          #ffffff
+cursor                          #00ee00
 cursor_text_color               #000000
 # Tab bar colors (optional)
 active_tab_foreground           #ffffff
